julia: creative JNI libs for modules